--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background: #333;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @keyframes floaty {
